Заменил UI shared комоненты на naive-ui

--- a/src/app/styles/base.css
+++ b/src/app/styles/base.css
@@ -5,3 +5,8 @@
 .n-form-item-feedback--error {
     text-align: right;
 }
+
+.n-form-item .n-form-item-blank {
+    flex-direction: column;
+    align-items: end;
+}
